src/test/compile-fail/issue-3096-2.rs
enum bottom { } 

fn main() {
    let x = ptr::addr_of(()) as *bottom;
    match x { } //~ ERROR non-exhaustive patterns
}
